--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "gl-matrix": "^3.4.3"
   },
   "devDependencies": {
+    "http-server": "^14.1.1",
     "prettier": "^2.8.8",
     "webpack": "^5.85.0",
-    "webpack-cli": "^5.1.1"
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.1"
   }
 }
